master_worker/deployment/PayaraServer/server/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payara-server
  namespace: mineco
  labels:
    run: payara-server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: payara-server
  template:
    metadata:
      labels:
        run: payara-server
    spec:
      containers:
      - name: payara-server
        image: jjolon/payara-server:latest 
        imagePullPolicy: IfNotPresent
        ports:
          # - containerPort: 8080
          #   protocol: TCP
          - containerPort: 8181
            protocol: TCP
          - containerPort: 8282
            protocol: TCP
          - containerPort: 4848
            protocol: TCP
          - containerPort: 80
            protocol: TCP
        volumeMounts:
            - mountPath: "/glassfish5/glassfish/domains"
              name: vol-payara
      volumes:
        - name: vol-payara
          persistentVolumeClaim:
            claimName: payara-deploy
