master_worker/deployment/PayaraServer/server/02-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-payara
  namespace: mineco
  labels:
    app.kubernetes.io/name: payara-server
    app.kubernetes.io/part-of: payara-server
spec:
  # type: ClusterIP
  type: LoadBalancer
  externalIPs:
  - 128.5.9.83
  ports:
    - name: http
      port: 80
      protocol: TCP
    - name: listener-2
      port: 8282
      protocol: TCP
    - name: listener-1
      port: 8181
      protocol: TCP
    - name: asadmin
      port: 4848
      protocol: TCP
    - name: http-service
      port: 8080
      protocol: TCP
  selector:
    run: payara-server
