master_worker/deployment/PayaraServer/server/0-deployment-diaco.yml
# Namespace MINECO
apiVersion: v1
kind: Namespace
metadata:
  name: mineco
---
#  INGRESS MINECO
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  externalIPs:
  - 128.5.9.82
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
  selector:
    app: nginx-ingress


---
# DEPLOYMENT APP
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payara-server-rgm
  namespace: rgm
  labels:
    run: payara-server-rgm
spec:
  replicas: 1
  selector:
    matchLabels:
      run: payara-server-rgm
  template:
    metadata:
      labels:
        run: payara-server-rgm
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 128.5.8.26
        searches:
          - mineco-dev.svc.cluster.local
          - svc.cluster.local 
          - cluster.local
      containers:
      - name: payara-server-rgm
        # image: payara/server-full:latest
        image: jjolon/payara:v4
        ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8181
            protocol: TCP
          - containerPort: 8282
            protocol: TCP
          - containerPort: 4848
            protocol: TCP
          - containerPort: 80
            protocol: TCP
        volumeMounts:
            - mountPath: "/opt/payara/appserver/glassfish/domains/domain1"
              name: vol-payara
            - mountPath: /home/diaco/Documentos/FILESERVER
              name: vol-filesystem
            - mountPath: /opt/payara/deployments
              name: vol-deployment
      volumes:
        - name: vol-payara
          persistentVolumeClaim:
            claimName: payara-deploy-rgm
        - name: vol-filesystem
          persistentVolumeClaim:
            claimName: filesystem-diaco
        - name: vol-deployment
          persistentVolumeClaim:
            claimName: deployment-diaco


---
# SERVICE INGRESS ADMIN
apiVersion: v1
kind: Service
metadata:
  name: service-payara
  namespace: mineco
  labels:
    app.kubernetes.io/name: payara-server
    app.kubernetes.io/part-of: payara-server
spec:
  # type: ClusterIP
  type: LoadBalancer
  externalIPs:
  - 128.5.9.83
  ports:
    - name: http
      port: 80
      protocol: TCP
    - name: listener-2
      port: 8282
      protocol: TCP
    - name: listener-1
      port: 8181
      protocol: TCP
    - name: asadmin
      port: 4848
      protocol: TCP
    - name: http-service
      port: 8080
      protocol: TCP
  selector:
    run: payara-server
---
# INGRESS CERTIFICATE SSL
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: mineco
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
    - hosts:
      - dev.mineco.gob.gt
      secretName: default-server-secret
  rules:
  - host: dev.mineco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-payara
            port:
              number: 80
