master_worker/deployment/PayaraServer/server/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: mineco
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: dev.mineco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-payara
            port:
              number: 80
