master_worker/deployment/PayaraServer/server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.mineco.gob.gt
    http:
      paths:
      - path: /test
        backend:
          serviceName: service-payara
          servicePort: 80
